<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTutorInfo">

    <TextView
        android:id="@+id/tutor_register_msg_text_view"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:text="@string/tutor_update_msg_text_view"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tutor_first_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/tutor_first_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_first_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_register_msg_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_register_msg_text_view" />

    <EditText
        android:id="@+id/tutor_first_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_first_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_register_msg_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_register_msg_text_view" />

    <TextView
        android:id="@+id/tutor_last_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_last_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_last_name_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tutor_first_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_first_name_text_view" />

    <EditText
        android:id="@+id/tutor_last_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_last_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_first_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_first_name_edit_text" />

    <TextView
        android:id="@+id/tutor_civic_number_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_civic_number_text_view"
        app:layout_constraintStart_toStartOf="@+id/tutor_last_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_last_name_text_view" />

    <EditText
        android:id="@+id/tutor_civic_number_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_civic_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_last_name_edit_text"
        app:layout_constraintStart_toEndOf="@+id/tutor_civic_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_last_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tutor_street_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_street_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_street_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_civic_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_civic_number_text_view" />

    <EditText
        android:id="@+id/tutor_street_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_street_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_civic_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_civic_number_edit_text" />

    <TextView
        android:id="@+id/tutor_app_number_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_app_number_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_app_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_street_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_street_name_text_view" />

    <EditText
        android:id="@+id/tutor_app_number_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_app_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_street_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_street_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tutor_city_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_city_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_city_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_app_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_app_number_text_view" />

    <EditText
        android:id="@+id/tutor_city_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_city_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_app_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_app_number_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tutor_province_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_province_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_province_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_city_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_city_name_text_view" />

    <EditText
        android:id="@+id/tutor_province_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_province_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_city_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_city_name_edit_text" />

    <TextView
        android:id="@+id/tutor_postal_code_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_postal_code_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_postal_code_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_province_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_province_name_text_view" />

    <EditText
        android:id="@+id/tutor_postal_code_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_postal_code_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_province_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_province_name_edit_text" />

    <TextView
        android:id="@+id/tutor_country_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_country_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_country_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_postal_code_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_postal_code_text_view" />

    <EditText
        android:id="@+id/tutor_country_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_country_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_postal_code_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_postal_code_edit_text" />

    <TextView
        android:id="@+id/tutor_tel_number_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_tel_number_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_tel_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_country_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_country_name_text_view" />

    <EditText
        android:id="@+id/tutor_tel_number_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_tel_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_country_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_country_name_edit_text" />

    <TextView
        android:id="@+id/tutor_subj_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_subj_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_subj_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_tel_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_tel_number_text_view" />

    <EditText
        android:id="@+id/tutor_subj_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_subj_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_tel_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_tel_number_edit_text" />

    <TextView
        android:id="@+id/tutor_hour_fees_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_hour_fees_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_hour_fees_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_subj_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_subj_name_text_view" />

    <EditText
        android:id="@+id/tutor_hour_fees_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_hour_fees_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_subj_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_subj_name_edit_text" />

    <TextView
        android:id="@+id/tutor_experience_text_view"
        android:layout_width="116dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutor_experience_text_view"
        app:layout_constraintEnd_toStartOf="@+id/tutor_experience_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_hour_fees_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_hour_fees_text_view" />

    <EditText
        android:id="@+id/tutor_experience_edit_text"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tutor_experience_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/tutor_hour_fees_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tutor_hour_fees_edit_text" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tutor_experience_edit_text"
        app:layout_constraintStart_toStartOf="@+id/tutor_experience_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tutor_experience_text_view" >

        <Button
            android:id="@+id/update_tutor_info_nextTutor_button"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/update_tutor_info_nextTutor_button"/>
      <Button
        android:id="@+id/update_tutor_info_update_button"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:text="@string/update_tutor_info_update_button"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>