<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateParentInfo">

    <TextView
        android:id="@+id/parent_update_msg_text_view"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:text="@string/parent_update_msg_text_view"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/parent_first_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/parent_first_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_first_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_update_msg_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_update_msg_text_view" />

    <EditText
        android:id="@+id/parent_first_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_first_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_update_msg_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_update_msg_text_view"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_last_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_last_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_last_name_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/parent_first_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_first_name_text_view" />

    <EditText
        android:id="@+id/parent_last_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_last_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_first_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_first_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_civic_number_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_civic_number_text_view"
        app:layout_constraintStart_toStartOf="@+id/parent_last_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_last_name_text_view" />

    <EditText
        android:id="@+id/parent_civic_number_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_civic_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_last_name_edit_text"
        app:layout_constraintStart_toEndOf="@+id/parent_civic_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_last_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_street_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_street_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_street_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_civic_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_civic_number_text_view" />

    <EditText
        android:id="@+id/parent_street_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_street_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_civic_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_civic_number_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_app_number_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_app_number_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_app_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_street_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_street_name_text_view" />

    <EditText
        android:id="@+id/parent_app_number_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_app_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_street_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_street_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_city_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_city_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_city_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_app_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_app_number_text_view" />

    <EditText
        android:id="@+id/parent_city_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_city_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_app_number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_app_number_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_province_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_province_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_province_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_city_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_city_name_text_view" />

    <EditText
        android:id="@+id/parent_province_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_province_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_city_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_city_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_postal_code_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_postal_code_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_postal_code_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_province_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_province_name_text_view" />

    <EditText
        android:id="@+id/parent_postal_code_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_postal_code_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_province_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_province_name_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_country_name_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_country_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_country_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_postal_code_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_postal_code_text_view" />

    <EditText
        android:id="@+id/parent_country_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_country_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_postal_code_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_postal_code_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/parent_tel_number_text_view"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/parent_tel_number_text_view"
        app:layout_constraintEnd_toStartOf="@+id/parent_tel_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_country_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_country_name_text_view" />

    <EditText
        android:id="@+id/parent_tel_number_edit_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/parent_tel_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/parent_country_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/parent_country_name_edit_text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/parent_tel_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/parent_tel_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/parent_tel_number_text_view">

        <Button
            android:id="@+id/update_parent_info_nextparent_button"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/update_parent_info_nextparent_button"/>
    <Button
        android:id="@+id/update_parent_info_update_button"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:text="@string/update_parent_info_update_button"/>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>